<resources>
    <string name="app_name">학원 어디?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_create_chatting_room">채팅 문의하기</string>
    <string name="academy_app">학원 어디?</string>
    <string name="menu_home">홈 화면</string>
    <string name="menu_logout">로그아웃</string>
    <string name="menu_upload">강의 영상 업로드</string>
    <string name="menu_download">강의 영상 다운로드</string>
    <string name="menu_chatting">학원 문의 채팅</string>
    <string name="menu_academy_management">학원 정보 관리</string>
    <string name="chatting_management">채팅 문의 관리</string>
    <string name="menu_downloader_management">강의 영상 고객 관리</string>
    <string name="channel_name">chat_channel</string>
    <string name="search_academy">학원 검색</string>

</resources>