<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_director_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_director_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />

        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_baseline_cloud_upload_24"
            android:title="@string/menu_upload" />

        <item
            android:id="@+id/nav_academy_management"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_academy_management" />

        <item
            android:id="@+id/nav_chatting_director"
            android:icon="@drawable/ic_baseline_chat_24"
            android:title="@string/chatting_management" />

        <item
            android:id="@+id/nav_downloader_management_director"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_downloader_management" />

    </group>
</menu>